--- a/auth.html
+++ b/auth.html
@@ -12,12 +12,12 @@
   </head>
 
   <body>
-    <section class="_root">
+    <!-- <section class="_root">
       <aside class="_root__aside-bar"
         data-import="/module/sidebar/sidebar.html"> sidebar </aside>
       <main class="_root__main" data-import="/module/main/main.html"></main>
       <footer class="_root__footer" data-import="/module/footer/footer.html"></footer>
-    </section>
+    </section> -->
 
     <script src="/assets/js/global.js"></script>
   </body>
