working on styling 2 buttons as seperate components as opposed to reusing only 1 button throughout

--- a/auth.html
+++ b/auth.html
@@ -8,7 +8,7 @@
       rel="stylesheet"/>
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/global.css" />
-    <title>Completer App</title>
+    <title>Smart Task Manager App</title>
   </head>
 
   <body>
@@ -18,6 +18,11 @@
       <main class="_root__main" data-import="/module/main/main.html"></main>
       <footer class="_root__footer" data-import="/module/footer/footer.html"></footer>
     </section> -->
+
+
+    <main>
+      <h1>Welcome Back!</h1>
+    </main>
 
     <script src="/assets/js/global.js"></script>
   </body>
