--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="/modules/signin/signin.css" />
+<link rel="stylesheet" href="/modules/login/login.css" />
 
 
-<section class="signin-sheet"> content </section>
+<section class="login-sheet"> content </section>
 
 
-<script src="/modules/signin/signin.js"></script>
+<script src="/modules/login/login.css"></script>
