--- a/modules/background/backgd.html
+++ b/modules/background/backgd.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/modules/background/backgd.css">
+
 <section class="body">
     <section class="left">
         <div>
@@ -19,6 +20,6 @@
 
 <section class="overlay">
     <div>
-        <img src="/assets/images/svg/auth-svg/green-arrow.svg" alt="Green arrow">
+        <img src="/assets/images/svg/auth-svg/green-arrow.svg" alt="Green arrow" class="arrow">
     </div>
 </section>
