addressing assets render failure and styling the root html

--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -20,9 +20,9 @@
         <section id="email-input" data-import="/components/input-email/input.html"></section>
         <section id="password-input" data-import="/components/input-password/input.html"></section>
 
-        <section id="button-import">
-            <div id="import-btn1" data-import=""></div>
-            <div id="import-btn2" data-import=""></div>
+        <section id="button-imports">
+            <div id="import-btn1" data-import="/components/btn-help/btn.html"></div>
+            <div id="import-btn2" data-import="/components/btn-next-step/btn.html"></div>
         </section>
     </form>
 </section>
