--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -11,8 +11,8 @@
     </section>
 
     <section class="login-page__middle">
-        <button class="btn1">Login</button>
-        <button class="btn2">Sign Up</button>
+        <button class="bttn one">Login</button>
+        <button class="bttn two">Sign Up</button>
     </section>
 
     <form class="login-page__form">
