Removed all js files 3rd restart

--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -16,9 +16,8 @@
     </section>
 
     <form class="login-page__form">
-        <section id="name-input" data-import="/components/input-name/input.html"></section>
-        <section id="email-input" data-import="/components/input-email/input.html"></section>
-        <section id="password-input" data-import="/components/input-password/input.html"></section>
+        <section class="email-input" data-import="/components/input-email/input.html"></section>
+        <section class="password-input" data-import="/components/input-password/input.html"></section>
 
         <section id="button-imports">
             <div id="import-btn1" data-import="/components/btn-help/btn.html"></div>
@@ -28,4 +27,4 @@
 </section>
 
 
-<script src="/modules/login/login.css"></script>
+<script src="/modules/login/login.js"></script>
