finishing ui touches on login page

--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -19,11 +19,16 @@
         <section class="email-input" data-import="/components/input-email/input.html"></section>
         <section class="password-input" data-import="/components/input-password/input.html"></section>
 
-        <section id="button-imports">
+        <section id="button-imports" class="button-imports">
             <div id="import-btn1" data-import="/components/btn-help/btn.html"></div>
             <div id="import-btn2" data-import="/components/btn-next-step/btn.html"></div>
         </section>
     </form>
+    <article class="foot-texts">
+        <span class="text-span">By continuing, you agree to our</span> 
+        <a href="#" class="a">Terms of Service</a> & <a href="#" class="a">Privacy Policy</a> <br>
+        © 2024 TaskMaster | Made for University Students
+    </article>
 </section>
 
 
