--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/modules/login/login.css" />
 
 
-<section class="login-page" >
+<section class="login-page" id="loginPage">
     <section class="login-page__top">
         <figure>
             <img src="/assets/images/svg/auth-svg/logo.svg" alt="Logo">
