--- a/auth.html
+++ b/auth.html
@@ -22,7 +22,7 @@
       <section class="root" data-import="/modules/background/backgd.html"></section>
       <main class="root__main"></main>
       <section id="login" data-import="/modules/login/login.html"></section>
-      <!-- <section id="signup" data-import="/modules/signup/signup.html"></section> -->
+      <section id="signup" data-import="/modules/signup/signup.html"></section>
     </section>
 
 
