Starting over with components on project smart app

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css"/>
     <!-- <link rel="stylesheet" href="/assets/css/reset.css"> -->
     <link rel="stylesheet" href="/assets/css/global.css" />
-    <link rel="stylesheet" href="/assets/css/auth.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
 
     <!-- icons -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Smart Task Manager App</title>
   </head>
 
@@ -20,9 +20,11 @@
 
     <section class="container">
       <section class="root" data-import="/modules/background/backgd.html"></section>
-      <main class="root__main"></main>
-      <section id="login" data-import="/modules/login/login.html"></section>
-      <!-- <section id="signup" data-import="/modules/signup/signup.html"></section> -->
+      <main class="root__main">
+        <section id="login" data-import="/modules/login/login.html"></section>
+      <!-- <section id="signup" data-import="/modules/signup/signup.html" class="hidden"></section> -->
+      </main>
+      
     </section>
 
 
